New JMH benchmark methods - vdot8s, neonVdot8s and sveVdot8s that implement int8 dotProduct in C using Neon and SVE intrinsics respectively. Fallback to Neon if SVE instructions are not supported by target platform